guard session, error and loader interceptors and auth completed

--- a/src/app/shared/components/header-sidebar/header-sidebar.component.html
+++ b/src/app/shared/components/header-sidebar/header-sidebar.component.html
@@ -2,12 +2,12 @@
   <header class="header">
     <div class="header-container">
       <div class="logo">
-        <p>MyApp</p>
+        <p>Bienvenidos a RecetApp</p>
       </div>
       <div class="session-icon">
         <i class="uil uil-user-circle"></i>
         <div class="dropdown">
-          <button class="logout-button">Cerrar sesión</button>
+          <button class="logout-button" (click)="logOut()">Cerrar sesión</button>
         </div>
       </div>
     </div>
