--- a/src/app/modules/recipes/pages/recipes-page/recipes-page.component.css
+++ b/src/app/modules/recipes/pages/recipes-page/recipes-page.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  justify-content: center;
+  justify-content: space-around;
   padding: 16px;
 }
 
