--- a/src/app/shared/components/header-sidebar/header-sidebar.component.css
+++ b/src/app/shared/components/header-sidebar/header-sidebar.component.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000; /* Asegura que el header esté por encima del contenido */
+  z-index: var(--header-sidebar-z);
 }
 
 .header-container {
@@ -83,6 +83,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  z-index: var(--header-sidebar-z);
 }
 
 .sidebar__list {
