crud done, recipe details done, warning service, auth interceptor, blabla

--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -1,6 +1,8 @@
 <div class="home-layout">
   <div class="home-content">
-    <router-outlet name="child"></router-outlet>
+    <!-- <router-outlet name="child"></router-outlet> -->
+    <app-global-warning-modal></app-global-warning-modal>
+    <router-outlet></router-outlet>
   </div>
   <app-header-sidebar class="header-sidebar"></app-header-sidebar>
 </div>
