--- a/src/app/modules/recipes/components/recipe-form/recipe-form.component.css
+++ b/src/app/modules/recipes/components/recipe-form/recipe-form.component.css
@@ -15,10 +15,16 @@
   border: 2px solid var(--color-1);
   border-radius: 8px;
   padding: 20px;
-  width: 400px;
-  max-width: 90%;
+  width: 80%;
+  height: 90%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   position: relative;
+  overflow: hidden;
+}
+
+.modal-content form {
+  height: 100%;
+  overflow: auto;
 }
 
 .close {
@@ -33,8 +39,8 @@
 }
 
 .close:hover {
-  background-color: var(--color-2); /* Cambiar el fondo al color secundario en hover */
-  color: var(--color-1); /* Cambiar el color del texto al color principal en hover */
+  background-color: var(--color-2);
+  color: var(--color-1);
 }
 
 h2 {
@@ -60,7 +66,7 @@ h2 {
   border: 1px solid var(--color-2);
   border-radius: 4px;
   background-color: var(--color-3);
-  color: var(--color-2);
+  color: var(--color-1);
 }
 
 .form-group input.modified,
@@ -70,8 +76,8 @@ h2 {
 
 
 button {
-  background-color: var(--color-2);
-  color: var(--color-1);
+  background-color: var(--color-1);
+  color: var(--color-4);
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
@@ -85,5 +91,25 @@ button:disabled {
 }
 
 button:not(:disabled):hover {
-  background-color: var(--color-3);
+  background-color: #218838;
+}
+
+.ingredient-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.ingredient-item input {
+  flex: 1;
+}
+
+.ingredient-item button {
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0 10px;
 }
