--- a/src/app/modules/recipes/components/recipe-form/recipe-form.component.html
+++ b/src/app/modules/recipes/components/recipe-form/recipe-form.component.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <div class="modal-content">
     <span class="close" (click)="onClose()">&times;</span>
-    <h2>Detalle de la Receta</h2>
+    <h2>{{ isNewRecipe ? 'Nueva Receta' : 'Editar Receta' }}</h2>
     <form [formGroup]="recipeForm" (ngSubmit)="onSave()">
       <div class="form-group">
         <label for="name">Nombre</label>
@@ -12,10 +12,21 @@
         <textarea id="description" formControlName="description" [ngClass]="{'modified': recipeForm.get('description')?.dirty}"></textarea>
       </div>
       <div class="form-group">
+        <label>Ingredientes</label>
+        <div formArrayName="ingredients">
+          <div *ngFor="let ingredient of ingredients.controls; let i = index" [formGroupName]="i" class="ingredient-item" >
+            <input formControlName="name" placeholder="Nombre del ingrediente" [ngClass]="{'modified': ingredient.get('name')?.dirty}">
+            <input formControlName="amount" placeholder="Cantidad" [ngClass]="{'modified': ingredient.get('amount')?.dirty}">
+            <button type="button" (click)="removeIngredient(i)">x</button>
+          </div>
+        </div>
+        <button type="button" (click)="addIngredient()">+ Agregar Ingrediente</button>
+      </div>
+      <div class="form-group">
         <label for="imagePath">URL de la Imagen</label>
         <textarea id="imagePath" formControlName="imagePath" type="texta" [ngClass]="{'modified': recipeForm.get('imagePath')?.dirty}"></textarea>
       </div>
-      <button type="submit" [disabled]="recipeForm.invalid">Guardar</button>
+      <button type="submit" [disabled]="recipeForm.invalid">{{ isNewRecipe ? 'Crear' : 'Guardar' }}</button>
     </form>
   </div>
 </div>
