--- a/src/app/modules/recipes/pages/recipes-page/recipes-page.component.css
+++ b/src/app/modules/recipes/pages/recipes-page/recipes-page.component.css
@@ -57,9 +57,7 @@
   margin-top: 8px;
 }
 
-.favorite-button,
-.edit-button,
-.delete-button {
+.favorite-button {
   background: none;
   border: none;
   cursor: pointer;
@@ -67,11 +65,6 @@
   color: #ffcc00;
 }
 
-.edit-button:hover,
-.delete-button:hover{
-  background-color: rgba(99, 96, 96, 0.1);
-  border-radius: 70%;
-}
 
 .favorite-button .fa-star {
   color: #ffcc00;
@@ -81,11 +74,28 @@
   color: #ccc;
 }
 
-.edit-button .fa-pencil-alt {
-  color: var(--color-3);
+.new-recipe-button {
+  background-color: #28a745;
+  color: white;
+  font-size: 1.25em;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 0.25em;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  gap: 16px;
+  margin-bottom: 16px;
 }
 
-.delete-button .fa-trash {
-  color: red; /* Usa un color adecuado para el icono de eliminación */
+.new-recipe-button:hover {
+  background-color: #218838;
+}
+
+.new-recipe-button i {
+  font-size: 1.25em; /* Tamaño del icono */
 }
 
