--- a/src/app/modules/recipes/pages/recipes-page/recipes-page.component.html
+++ b/src/app/modules/recipes/pages/recipes-page/recipes-page.component.html
@@ -1,23 +1,22 @@
+<!-- <router-outlet name="recipeDetails"></router-outlet> -->
+<button class="btn btn-primary btn new-recipe-button ml-3" (click)="createNewRecipe()">
+  <i class="fas fa-plus"></i>Nueva Receta
+</button>
 <div class="recipes-container">
   <div class="recipe-card" *ngFor="let recipe of recipes">
     <button (click)="toggleFavorite(recipe)" class="favorite-button">
       <i [ngClass]="recipe.isFavorite ? 'fas fa-star' : 'far fa-star'"></i>
     </button>
-    <div class="recipe-image">
+    <div class="recipe-image" (click)="openRecipeDetail(recipe)">
       <img appImgBroken [src]="recipe.imagePath" alt="{{ recipe.name }}">
     </div>
     <div class="recipe-content">
       <h3>{{ recipe.name }}</h3>
       <div class="recipe-actions">
-        <button (click)="openRecipeDetail(recipe)" class="edit-button">
-          <i class="fas fa-pencil-alt"></i>
-        </button>
-        <button (click)="removeRecipe(recipe._id!)" class="delete-button">
-          <i class="fas fa-trash"></i>
-        </button>
+        <app-edit-delete-button [selectedRecipe]="recipe"></app-edit-delete-button>
       </div>
     </div>
   </div>
 </div>
 
-<app-recipe-detail *ngIf="selectedRecipe" [recipe]="selectedRecipe" (close)="closeRecipeDetail()" (save)="updateRecipe($event)"></app-recipe-detail>
+<app-recipe-form *ngIf="(recipeService.openForm$ | async)" [recipe]="(recipeService.selectedRecipe$ | async)" (close)="recipeService.closeForm()"></app-recipe-form>
